--- a/webapp/packages/react-app/src/components/preview-section/preview-iframe/preview-iframe.css
+++ b/webapp/packages/react-app/src/components/preview-section/preview-iframe/preview-iframe.css
@@ -1,29 +1,8 @@
-.preview-wrapper {
-  /*position: relative;*/
-  width: 100%;
-  position: absolute;
-  top: 0px;
-  left: 0px;
+.preview-iframe {
+  flex-grow: 1;
+  display: flex;
 }
 
-.preview-wrapper iframe {
-  /*height: 100%;*/
-  width: 100%;
-}
-
-.preview-error {
-  position: absolute;
-  top: 10px;
-  left:10px;
-  color: red;
-}
-
-.react-draggable-transparent-selection .preview-wrapper:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  opacity: 0;
+.preview-iframe iframe {
+  flex-grow: 1;
 }
