--- a/webapp/packages/react-app/src/components/preview-section/preview-tabs-panel.css
+++ b/webapp/packages/react-app/src/components/preview-section/preview-tabs-panel.css
@@ -1,25 +1,45 @@
 .preview-tabs-wrapper {
   flex-grow: 1;
   border: 2px solid lightcoral;
+
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  gap: 10px;
 
+  padding: 5px;
 }
 
-.preview-tabs-bar {
-  /*height: 40px;*/
-  /*border: 1px solid lightcyan;*/
-}
 
 /* The following is inside bulma */
-.preview-tabs-wrapper .tabs {
-  margin: 0;
-}
+/*.preview-tabs-wrapper .tabs {*/
+/*  margin: 0;*/
+/*}*/
 
 .preview-tabs-panel {
   flex-grow: 1;
   overflow: scroll;
   position: relative;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.preview-tab {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+
+  /* flex-grow doesn't work here: could be due to position absolute */
+  /*flex-grow: 1;*/
+  width: 100%;
+  height: 100%;
+
+  background-color: white;
+  font-family: "Courier New";
+  color: black;
+
+  /* padding here causes a gradient while horizontal scroll when scroll bar is present*/
+  /*padding: 5px;*/
+
+  display: flex;
 }
